<resources>
    <string name="app_name">Planets</string>
    <string name="marsBaslik">Mars</string>
    <string name="ozellik1">Red Planet</string>
    <string name="ozellik2">4th Planet</string>
    <string name="ozellik3">6.767 km Diameter</string>
    <string name="marsAciklama">Mars is the fourth planet of the Solar System from the Sun. It is named after Mars, the god of war in Roman mythology. It is also called the Red Planet because it has a reddish appearance due to the common iron oxide on its surface. </string>
    <string name="buttonYazi">DISCOVER MORE OF MARS</string>


</resources>